# pd2-trade

./: .gitignore  .prettierignore  DEVELOPING.md  README.md  code.js  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  test.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: page.yml  pages.yml  publish-to-manual-release.yml  release.yml
docs/: download.md  faq.md  index.md  issues.md  package-lock.json  package.json  pd2-login.md  quick-start.md
docs/.vitepress/: config.js
docs/.vitepress/theme/: Layout.vue  index.js  style.css
scripts/: type-puller.ts
src/: globals.css  main.tsx  type.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/modules/: commands.rs  keyboard.rs  mod.rs  system.rs  webview.rs  window.rs
src/assets/: abilities.ts  changeLog.ts  character-skills.ts  class-skills.ts  itemFuzzySearch.ts  items.ts
src/common/: constants.ts  generateSkillMap.ts  item-types.ts  updater.tsx
src/common/types/: CharacterSkill.ts  EventPayload.ts  Events.ts  Item.ts  Location.ts
src/components/: theme-provider.tsx
src/components/custom/: hover-dropdown.tsx  hover-popover.tsx  resizeable-div.tsx
src/components/ui/: button.tsx  (+17 more)
src/hooks/: useClickThrough.tsx  useClipboard.ts  useDetails.tsx  useDialog.tsx  useInstance.tsx  useInstanceManager.tsx  useItems.tsx  useKeySender.ts  useOptions.tsx  useRefs.tsx  useToolbar.tsx  useTray.tsx  useUpdater.tsx
src/lib/: axios.ts  utils.ts  window.ts
(+64 files in other folders)
