[package]
name = "pd2-trader"
version = "0.1.4"
description = "PD2 Trader"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dmg_meter_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
winreg = "0.10"
runas = "0.2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
rdev = "0.5.1"
tauri-plugin-app-exit = "0.1"
tauri-plugin-fs = "2"
winapi = { version = "0.3", features = ["winuser", "minwindef"] }
enigo = { version = "0.5.0", features = ["default"] }

windows-sys = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

windows = "0.58.0"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

